--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,10 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "deploy-ghpages": {
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {}
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
@@ -89,6 +93,9 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
